@@ -101,6 +101,17 @@
 	(w3m-scroll-down-or-previous-url, w3m-scroll-up-or-next-url): bugfix:
 	when new page no longer uses old label.
 
+2020-09-03  Katsumi Yamaoka  <yamaoka@jpl.org>
+
+	Allow url like "file:foo.txt" (bug#969386 of debian)
+	emacs-w3m assumes the file to be existent in `w3m-default-directory'
+	(if specified), the current directory, or the home directory.
+
+	* w3m.el (w3m-url-to-file-name): Allow url like "file:foo.txt",
+	that doesn't specify server and/or directory.
+
+	* w3m-util.el (w3m-url-local-p): Check also if the file really exists.
+
 2020-08-30  Boruch Baum  <boruch_baum@gmx.com>
 
 	* w3m-hist.el (w3m-history-scrub-optional-elements): Forgot to escape
